# rwog

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  README.pandoc
.github/: dependabot.yml
ci/: deploy
src/: main.rs
src/error/: permission-denied.txt
src/help/: about.txt  commands-long.txt  groups-long.txt
